--- a/LaTex/library.bib
+++ b/LaTex/library.bib
@@ -335,6 +335,26 @@
  year = {2012}
 }
 
+@misc{Goldblum2024,
+      title={The No Free Lunch Theorem, Kolmogorov Complexity, and the Role of Inductive Biases in Machine Learning}, 
+      author={Micah Goldblum and Marc Finzi and Keefer Rowan and Andrew Gordon Wilson},
+      year={2024},
+      eprint={2304.05366},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2304.05366}, 
+}
+
+@misc{Maddox2020,
+      title={Rethinking Parameter Counting in Deep Models: Effective Dimensionality Revisited}, 
+      author={Wesley J. Maddox and Gregory Benton and Andrew Gordon Wilson},
+      year={2020},
+      eprint={2003.02139},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2003.02139}, 
+}
+
 @misc{Huang2019,
       title={GPipe: Efficient Training of Giant Neural Networks using Pipeline Parallelism}, 
       author={Yanping Huang and Youlong Cheng and Ankur Bapna and Orhan Firat and Mia Xu Chen and Dehao Chen and HyoukJoong Lee and Jiquan Ngiam and Quoc V. Le and Yonghui Wu and Zhifeng Chen},
@@ -529,6 +549,63 @@ url={https://openreview.net/forum?id=ry_WPG-A-},
       url={https://arxiv.org/abs/1710.10345}, 
 }
 
+@misc{Wilson2025,
+      title={Deep Learning is Not So Mysterious or Different}, 
+      author={Andrew Gordon Wilson},
+      year={2025},
+      eprint={2503.02113},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2503.02113}, 
+}
+
+@misc{Huang2020,
+      title={Understanding Generalization through Visualizations}, 
+      author={W. Ronny Huang and Zeyad Emam and Micah Goldblum and Liam Fowl and J. K. Terry and Furong Huang and Tom Goldstein},
+      year={2020},
+      eprint={1906.03291},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1906.03291}, 
+}
+
+@article{DeVore1998,
+	title = {Nonlinear approximation},
+	volume = {7},
+	copyright = {https://www.cambridge.org/core/terms},
+	issn = {0962-4929, 1474-0508},
+	url = {https://www.cambridge.org/core/product/identifier/S0962492900002816/type/journal_article},
+	doi = {10.1017/S0962492900002816},
+	language = {en},
+	urldate = {2025-04-03},
+	journal = {Acta Numerica},
+	author = {DeVore, Ronald A.},
+	month = jan,
+	year = {1998},
+	pages = {51--150},
+}
+
+@article{DeVore1996,
+  author = {DeVore, Ronald and Temlyakov, V.},
+  year = {1996},
+  month = {12},
+  pages = {173-187},
+  title = {Some remarks on greedy algorithm},
+  volume = {5},
+  journal = {Advances in Computational Mathematics},
+  doi = {10.1007/BF02124742}
+  }
+
+@misc{Li2018,
+      title={Visualizing the Loss Landscape of Neural Nets}, 
+      author={Hao Li and Zheng Xu and Gavin Taylor and Christoph Studer and Tom Goldstein},
+      year={2018},
+      eprint={1712.09913},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1712.09913}, 
+}
+
 @article{Krizhevsky2009,
     title= {CIFAR-10 and CIFAR-100 (Canadian Institute for Advanced Research)},
     journal= {},
@@ -693,6 +770,36 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   url={https://arxiv.org/abs/2303.14151}
+}
+
+@misc{Diederik2017,
+      title={Adam: A Method for Stochastic Optimization}, 
+      author={Diederik P. Kingma and Jimmy Ba},
+      year={2017},
+      eprint={1412.6980},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/1412.6980}, 
+}
+
+@misc{Mingard2023,
+      title={Do deep neural networks have an inbuilt Occam's razor?}, 
+      author={Chris Mingard and Henry Rees and Guillermo Valle-Pérez and Ard A. Louis},
+      year={2023},
+      eprint={2304.06670},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2304.06670}, 
+}
+
+@misc{Yang2020,
+      title={Rethinking Bias-Variance Trade-off for Generalization of Neural Networks}, 
+      author={Zitong Yang and Yaodong Yu and Chong You and Jacob Steinhardt and Yi Ma},
+      year={2020},
+      eprint={2002.11328},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2002.11328}, 
 }
 
 @misc{Curth2023,
