--- a/LaTex/preliminares/introduccion.tex
+++ b/LaTex/preliminares/introduccion.tex
@@ -25,7 +25,7 @@ Aunque cada vez hay más estudios abordando el suceso, muchos de ellos se centra
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\textwidth]{img/problem-definition.png}
+    \includegraphics[width=0.8\textwidth]{img/problem-definition.png}
     \caption[Ejemplo de doble descenso profundo en ResNet18~\cite{Nakkiran2019}.] {Ejemplo de doble descenso en ResNet18~\cite{Nakkiran2019}. La imagen muestra el error de entrenamiento (\textit{train error}) y de generalización (\textit{test error}) para la arquitectura ResNet18 con diferente capacidad (número de parámetros). En ella, observamos las tres regiones de actuación del modelo claramente diferenciadas, así como el máximo del error de generalización correspondiente al umbral de interpolación y los dos descensos de la curva de dicho error.}\label{fig:ejemplo-definicion-double-descent}
 \end{figure}
 
