--- a/LaTex/capitulos/estado_arte.tex
+++ b/LaTex/capitulos/estado_arte.tex
@@ -3,21 +3,24 @@
 
 \chapter{Trabajos relacionados}\label{sec:evolucion-ddd}
 
-El \emph{Deep Double Descent}, al estar estrechamente relacionado al avance tecnológico y al crecimiento en la capacidad y el tamaño de los modelos de aprendizaje profundo, ha despertado un mayor interés en los últimos años, como puede observarse en la~\autoref{fig:histogram}. No obstante, aunque se percibe durante los últimos años una tendencia al alza del número de artículos que hacen referencia al mismo, únicamente encontramos un total 224 publicaciones en Scopus\footnote{Encontradas 224 publicaciones a fecha 21 de marzo de 2025 usando la consulta: TITLE-ABS-KEY ( ( deep AND double AND descent ) OR ( overparameterized AND generalization ) ) AND PUBYEAR < 2025 AND ( LIMIT-TO ( SUBJAREA,"COMP" ) OR LIMIT-TO ( SUBJAREA,"ENGI" ) OR LIMIT-TO ( SUBJAREA,"MATH" ) OR LIMIT-TO ( SUBJAREA,"PHYS" ) ) AND ( LIMIT-TO ( EXACTKEYWORD,"Machine Learning" ) OR LIMIT-TO ( EXACTKEYWORD,"Deep Learning" ) OR LIMIT-TO ( EXACTKEYWORD,"Generalization" ) OR LIMIT-TO ( EXACTKEYWORD,"Performance" ) OR LIMIT-TO ( EXACTKEYWORD,"Neural-networks" ) OR LIMIT-TO ( EXACTKEYWORD,"Deep Neural Networks" ) OR LIMIT-TO ( EXACTKEYWORD,"Overparameterization" ) OR LIMIT-TO ( EXACTKEYWORD,"Overfitting" ) OR LIMIT-TO ( EXACTKEYWORD,"Generalization Error" ) OR LIMIT-TO ( EXACTKEYWORD,"Generalization Performance" ) OR LIMIT-TO ( EXACTKEYWORD,"Neural Networks" ) OR LIMIT-TO ( EXACTKEYWORD,"Interpolation" ) OR LIMIT-TO ( EXACTKEYWORD,"Generalize" ) ).}. Esta reciente relevancia ilustra el carácter \textbf{innovador} y \textbf{pionero} de este proyecto.\newline
+El \emph{Deep Double Descent}, al estar estrechamente relacionado al avance tecnológico y al crecimiento en la capacidad y el tamaño de los modelos de aprendizaje profundo, ha despertado un mayor interés en los últimos años, como puede observarse en la~\autoref{fig:histogram}. No obstante, aunque se percibe durante los últimos años una tendencia al alza del número de artículos que hacen referencia al mismo, únicamente encontramos un total $224$ publicaciones en Scopus\footnote{Encontradas $224$ publicaciones a fecha $21$ de marzo de $2025$ usando la consulta:  
+\texttt{TITLE-ABS-KEY ((deep AND double AND descent) OR (overparameterized AND generalization)) AND PUBYEAR < 2025 AND (LIMIT-TO (SUBJAREA,\textquotedblleft COMP\textquotedblright) OR LIMIT-TO (SUBJAREA,\textquotedblleft ENGI\textquotedblright) OR LIMIT-TO (SUBJAREA,\textquotedblleft MATH\textquotedblright) OR LIMIT-TO (SUBJAREA,\textquotedblleft PHYS\textquotedblright)) AND (LIMIT-TO (EXACTKEYWORD,\textquotedblleft Machine Learning\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Deep Learning\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Generalization\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Performance\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Neural-networks\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Deep Neural Networks\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Overparameterization\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Overfitting\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Generalization Error\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Generalization Performance\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Neural Networks\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Interpolation\textquotedblright) OR LIMIT-TO (EXACTKEYWORD,\textquotedblleft Generalize\textquotedblright))}.}. Esta reciente relevancia ilustra el carácter \textbf{innovador} y \textbf{pionero} de este proyecto.\newline
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\linewidth]{img/scopus_histogram.png}
-    \caption[Número de publicaciones relativas al Deep Double Descent (ir actualizando histograma de cara a nuevos papers).] {Número de publicaciones relativas al Deep Double Descent en función del año de publicación.}\label{fig:histogram}
+    \caption[Número de publicaciones relativas al \textit{Deep Double Descent} (ir actualizando histograma de cara a nuevos papers).] {Número de publicaciones relativas al \textit{Deep Double Descent} en función del año de publicación.}\label{fig:histogram}
 \end{figure}
 
 Sin embargo, aunque la cantidad de artículos científicos aún sea limitada, el interés por parte de investigadores y científicos está creciendo rápidamente. Incluso en ausencia de publicaciones científicas formales, se continúan obteniendo nuevos resultados, tanto teóricos como prácticos, que continúan enriqueciendo nuestra comprensión del problema.\newline
 
-A pesar de la disponibilidad de artículos que abordan el tema, la mayoría de ellos no proporcionan una explicación detallada del mismo, centrándose generalmente en casos prácticos y dejando de lado el análisis teórico intrínseco, limitando la comprensión completa de ciertos aspectos y resultados.\newline
+A pesar de la disponibilidad de artículos que abordan el tema, la mayoría de ellos no proporcionan una explicación detallada del mismo, centrándose generalmente en casos prácticos y dejando de lado el análisis teórico intrínseco, limitando su comprensión completa.\newline
 
 \section{Origen y primeras manifestaciones}\label{}
 
-La primera publicación formal sobre el \emph{Deep Double Descent} data de $1989$, como se muestra en la~\autoref{fig:histogram}. En ese año, Vallet et al.~\cite{Vallet1989} presentaron, de manera empírica, este comportamiento en el ámbito de la física teórica, al emplear la pseudoinversa para abordar problemas de regresión lineal con datos artificiales. La siguiente evidencia empírica fue presentada por Krogh \& Hertz en el año $1991$~\cite{Krogh1991}, quienes, de manera parcial, mostraron el suceso utilizando un modelo de regresión lineal.\newline
+Aunque la primera publicación sobre el \textit{Deep Double Descent} se remonta a $1998$, como se observa en la Figura~\ref{fig:histogram}, comportamientos similares parecen haber sido descritos por primera vez en la literatura de la física teórica en $1989$, siendo esta la primera publicación formal.\newline
+
+En ese año, Vallet et al.~\cite{Vallet1989} presentaron, de manera empírica, esta dinámica al emplear la pseudoinversa para abordar problemas de regresión lineal con datos artificiales. La siguiente evidencia empírica fue presentada por Krogh \& Hertz en el año $1991$~\cite{Krogh1991}, quienes, de manera parcial, mostraron el suceso utilizando un modelo de regresión lineal.\newline
 
 Posteriormente, nos remontamos hasta $1995$ cuando Opper presenta los primeros resultados teóricos en su artículo ``Statistical Mechanics of Generalization''~\cite{Opper1995}, a través del uso de una red neuronal formada por un perceptrón de una sola capa con una función de activación lineal conocida como ADALINE~\cite{WidrowHoff1960}, y, más tarde, en su revisión del artículo en $2001$ ``Learning to Generalize''~\cite{Opper2001}.\newline
 
@@ -64,7 +67,13 @@ Otras líneas de investigación han explorado cómo ciertas técnicas pueden mit
 
 Desde una perspectiva más empírica, varios estudios han analizado su manifestación en escenarios de aprendizaje adversario. En particular, Min et al. en $2021$~\cite{Ming2020} demostraron que, en algunos casos, un aumento de los datos de entrenamiento puede mejorar la robustez del modelo, aunque también puede provocar un descenso adverso en la generalización. Asimismo, Singh et al. en $2022$~\cite{Singh2022} presentaron un análisis teórico en redes neuronales de tamaño finito, proporcionando una caracterización matemática básica que ayuda a entender los mecanismos subyacentes. Por último, Somepalli et al. en $2022$~\cite{Somepalli2022} investigaron la reproducibilidad del aprendizaje en redes neuronales y su relación con el \textit{Deep Double Descent}.\newline
 
-Finalmente, investigaciones recientes han mostrado extensiones del doble descenso, pues este no está necesariamente limitado a dos descensos, sino que, bajo ciertas circunstancias, pueden observarse más de dos descensos~\cite{d_Ascoli2021, Chen2021}. Además, se ha estudiado su relación con otros sucesos emergentes en el aprendizaje profundo, como es el caso del \emph{grokking}. En este contexto, Davies et al. en $2023$~\cite{Davies2023} propusieron una conexión entre ambos, sugiriendo que el aprendizaje prolongado puede llevar a una mejora abrupta de la generalización.\newline
+Finalmente, investigaciones recientes han mostrado extensiones del doble descenso, pues este no está necesariamente limitado a dos descensos, sino que, bajo ciertas circunstancias, pueden observarse más de dos descensos~\cite{d_Ascoli2021, Chen2021}. Además, se ha estudiado su relación con otros sucesos emergentes en el aprendizaje profundo, como es el caso del \emph{grokking}. En este contexto, Davies et al. en $2023$~\cite{Davies2023} propusieron una conexión entre ambos, sugiriendo que el aprendizaje prolongado puede llevar a una mejora abrupta de la generalización (véase Figura~\ref{fig:grokking}).\newline
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.6\linewidth]{img/grokking.png}
+    \caption[\textit{Grokking} y \textit{Deep Double Descent}.]{Error en entrenamiento y generalización para el caso de \textit{grokking} (línea verde) y para el doble descenso (línea naranja). Se observa que el \textit{grokking} implica una mejora abrupta en términos de generalización una vez superado el umbral de interpolación, mientras que el doble descenso muestra una mejora progresiva a partir de ese punto.}\label{fig:grokking}
+\end{figure}
 
 Para concluir este capítulo, se presenta en la Tabla~\ref{tabla:resumen-contribuciones} un resumen de las principales publicaciones relacionadas con el doble descenso, aunque las primeras manifestaciones no utilizan la denominación actual, junto con sus contribuciones más relevantes. Asimismo, se incluye en la tabla el número de citas de cada publicación, obtenido a partir de \textit{Google Scholar}\footnote{Número de citas encontradas a día 14 de marzo de 2025.}.\newline
 
